# BSUIR_IaDCM

./: CMakeLists.txt
LAB1/: Battery.cpp  Battery.hpp  main.cpp
LAB2/: functions.hpp  hexioctrl.h  main.cpp  pci_codes.h
LAB3/: main.cpp
LAB4/: camera.hpp  main.cpp
